--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,74 @@
 @import "/bootstrap/bootstrap.css";
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   font-family: "Roboto", sans-serif;
 }
 
 .header__up {
-  height: 65px;
   background-color: #9BC715;
   color: white;
 }
 
-.header__bottom {
-  height: 85px;
-  background-color: #E1E1E1;
+.header__item {
+  margin: 5px auto;
 }
-
-li {
-  list-style-type: none;
-  font-size: 11pt;
+.header__item ul {
+  margin: 0;
+  padding: 0;
+}
+.header__item button {
+  margin-top: 5px;
+  background-color: #fff;
 }
 
 .telephone {
+  list-style-type: none;
   text-decoration: none;
   color: #fff;
-  font-size: 11pt;
+  font-size: 9pt;
 }
 .telephone:hover {
   color: #fff;
   text-decoration: none;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.header__bottom .btn {
+  margin-left: 5px;
+  color: #085507;
+}
+
+.dropdown-item {
+  --bs-dropdown-link-hover-color: #000;
+  --bs-dropdown-link-hover-bg: #c3e953;
+}
+
+.fullscreen-bg {
+  overflow: hidden;
+  z-index: -100;
+  position: relative;
+  height: 1000%;
+  width: 100%;
+  padding-top: 45%;
+}
+
+.fullscreen-bg__video {
+  position: absolute;
+  top: -25%;
+  left: 0;
+  width: 100%;
+}
+
+.overlay {
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
+}
+.overlay button {
+  color: #fff;
+  font-size: 18px;
+  margin-top: 35%;
+  margin-left: 10%;
+}
