--- a/scss/style.sass
+++ b/scss/style.sass
@@ -9,7 +9,7 @@ $darkgreen: #085507
 .header__up
     background-color: $litegreen
     color: white
-
+   
 .header__item
     margin: 5px auto
     ul
@@ -34,9 +34,18 @@ $darkgreen: #085507
         margin-left: 5px
         color: $darkgreen
 
+// .navbar
+//     margin-top: 25px
+
+#navbarNav 
+    a
+        font-size: 9pt
+
 .dropdown-item
     --bs-dropdown-link-hover-color: #000
     --bs-dropdown-link-hover-bg: #c3e953
+    &:hover
+        font-size: 19pt
 
 .fullscreen-bg 
     overflow: hidden
@@ -62,7 +71,6 @@ $darkgreen: #085507
     height: 100%
     z-index: 4
     button 
-        text-align:center
         color:#fff
         font-size: 18px
         margin-top: 35%
