--- a/scss/style.sass
+++ b/scss/style.sass
@@ -23,7 +23,7 @@ $darkgreen: #085507
     list-style-type: none
     text-decoration: none
     color: #fff
-    font-size: 9pt
+    font-size: 10pt
 
     &:hover
         color: #fff
@@ -39,7 +39,7 @@ $darkgreen: #085507
 
 #navbarNav 
     a
-        font-size: 9pt
+        font-size: 11pt
 
 .dropdown-item
     --bs-dropdown-link-hover-color: #000
@@ -53,14 +53,14 @@ $darkgreen: #085507
     position: relative
     height: 1000%
     width: 100%
-    padding-top:45%
+    padding-top:48%
 
- 
 .fullscreen-bg__video 
     position: absolute
     top: -25%
     left: 0
     width: 100%
+    
 
 .overlay 
     background: rgba(0,0,0,0.5)
@@ -75,5 +75,58 @@ $darkgreen: #085507
         font-size: 18px
         margin-top: 35%
         margin-left: 10%
+
+.main-text
+    padding-top: 3%
+    padding-left: 5%
+    padding-right: 5%
+    li
+        list-style-type: none
+        &:before
+            color: #9BC715
+            content: "●"
+            padding-right: 10px
+
+.icons
+    margin-bottom: 15px
+    .card
+        margin-top: 10px
+        margin-left: auto
+        margin-right: auto
+        width: 24rem
+        box-shadow: 0px 4px 20px 2px rgba(0, 0, 0, 0.25)
+        img
+            margin-left: auto
+            margin-right: auto
+            height: 30%
+            width:30%
+
+.image
+    margin-bottom: 15px
+    overflow: hidden
+    margin-left: auto
+    margin-right: auto
+    width: 24rem
+    overflow: hidden
+    border-radius: 5px
+    position: relative
+    .bottom-left
+        position: absolute
+        font-size: 20px
+        bottom: 10px
+        left: 15px
+        color: #fff
+    img
+        border-radius: 5px
+        margin-left: auto
+        margin-right: auto
+        display: block
+        transition: 1s
+        //width: 24rem
+        &:hover
+            transform: scale(1.2)
+            
+            
+        
  
     
