--- a/scss/style.sass
+++ b/scss/style.sass
@@ -70,11 +70,14 @@ $darkgreen: #085507
     width: 100%
     height: 100%
     z-index: 4
-    button 
-        color:#fff
+    p 
+        color:#ffffffd5
         font-size: 18px
-        margin-top: 35%
-        margin-left: 10%
+        bottom: 25px
+        left: 25px
+        font-size: 19pt
+        width: 50%
+        position: absolute
 
 .main-text
     padding-top: 3%
