--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,20 @@
   font-family: "Roboto", sans-serif;
 }
 
+h1 {
+  text-align: center;
+  color: #9BC715;
+}
+
+h4 {
+  text-align: center;
+  color: #9BC715;
+}
+
+.header {
+  margin-bottom: 20px;
+}
+
 .header__up {
   background-color: #9BC715;
   color: white;
@@ -49,13 +63,19 @@
   font-size: 19pt;
 }
 
+.main-text {
+  margin-bottom: 35px;
+}
+
 .fullscreen-bg {
   overflow: hidden;
   z-index: -100;
   position: relative;
-  height: 1000%;
-  width: 100%;
-  padding-top: 48%;
+  height: 100%;
+  width: 76%;
+  padding-top: 36%;
+  margin: auto;
+  border-radius: 5px;
 }
 
 .fullscreen-bg__video {
@@ -79,7 +99,6 @@
   font-size: 18px;
   bottom: 25px;
   left: 25px;
-  font-size: 19pt;
   width: 50%;
   position: absolute;
 }
@@ -99,7 +118,10 @@
 }
 
 .icons {
-  margin-bottom: 15px;
+  margin-bottom: 35px;
+}
+.icons p {
+  line-height: 1.3;
 }
 .icons .card {
   margin-top: 10px;
@@ -116,7 +138,7 @@
 }
 
 .image {
-  margin-bottom: 15px;
+  margin-bottom: 35px;
   overflow: hidden;
   margin-left: auto;
   margin-right: auto;
@@ -141,4 +163,27 @@
 }
 .image img:hover {
   transform: scale(1.2);
+}
+
+.consultation {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+form {
+  padding: 30px;
+  border: 1px solid #E1E1E1;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.consultation .btn {
+  color: #085507;
+  --bs-btn-bg: #fff;
+  --bs-btn-border-color: #085507;
+}
+.consultation .btn:hover {
+  color: #fff;
+  background-color: #9BC715;
+  border-color: #085507;
 }
