--- a/scss/style.sass
+++ b/scss/style.sass
@@ -6,6 +6,17 @@
 $litegreen: #9BC715
 $darkgreen: #085507
 
+h1
+    text-align: center
+    color: $litegreen
+
+h4
+    text-align: center
+    color: $litegreen
+
+.header
+    margin-bottom: 20px
+
 .header__up
     background-color: $litegreen
     color: white
@@ -34,9 +45,6 @@ $darkgreen: #085507
         margin-left: 5px
         color: $darkgreen
 
-// .navbar
-//     margin-top: 25px
-
 #navbarNav 
     a
         font-size: 11pt
@@ -47,13 +55,18 @@ $darkgreen: #085507
     &:hover
         font-size: 19pt
 
+.main-text
+    margin-bottom: 35px
+
 .fullscreen-bg 
     overflow: hidden
     z-index: -100
     position: relative
-    height: 1000%
-    width: 100%
-    padding-top:48%
+    height: 100%
+    width: 76%
+    padding-top:36%
+    margin: auto
+    border-radius: 5px
 
 .fullscreen-bg__video 
     position: absolute
@@ -75,7 +88,6 @@ $darkgreen: #085507
         font-size: 18px
         bottom: 25px
         left: 25px
-        font-size: 19pt
         width: 50%
         position: absolute
 
@@ -91,7 +103,9 @@ $darkgreen: #085507
             padding-right: 10px
 
 .icons
-    margin-bottom: 15px
+    margin-bottom: 35px
+    p
+        line-height: 1.3
     .card
         margin-top: 10px
         margin-left: auto
@@ -105,7 +119,7 @@ $darkgreen: #085507
             width:30%
 
 .image
-    margin-bottom: 15px
+    margin-bottom: 35px
     overflow: hidden
     margin-left: auto
     margin-right: auto
@@ -128,7 +142,28 @@ $darkgreen: #085507
         //width: 24rem
         &:hover
             transform: scale(1.2)
-            
+
+.consultation
+    width: 70%
+    margin-left: auto
+    margin-right: auto
+
+
+form
+    padding: 30px
+    border: 1px solid #E1E1E1
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)  
+
+.consultation
+    .btn
+        color: #085507
+        --bs-btn-bg: #fff
+        --bs-btn-border-color: #085507
+        &:hover
+            color: #fff
+            background-color: #9BC715
+            border-color: #085507
+
             
         
  
