--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import "/bootstrap/bootstrap.css";
 * {
-  font-family: "Roboto", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 h1 {
@@ -143,7 +143,6 @@ h4 {
   margin-left: auto;
   margin-right: auto;
   width: 24rem;
-  overflow: hidden;
   border-radius: 5px;
   position: relative;
 }
@@ -165,18 +164,23 @@ h4 {
   transform: scale(1.2);
 }
 
-.consultation {
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 form {
   padding: 30px;
   border: 1px solid #E1E1E1;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.consultation {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 35px;
+}
+.consultation img {
+  width: 300px;
+  display: block;
+  margin: 0 auto;
+}
 .consultation .btn {
   color: #085507;
   --bs-btn-bg: #fff;
@@ -186,4 +190,85 @@ form {
   color: #fff;
   background-color: #9BC715;
   border-color: #085507;
+}
+
+.socialnet-item {
+  position: relative;
+  margin-bottom: 35px;
+  width: 345px;
+  height: 181px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background: #FFFFFF;
+  border-radius: 55px;
+  padding-left: 43px;
+  padding-top: 15px;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+}
+.socialnet-item img {
+  position: absolute;
+  left: -25px;
+  bottom: -35px;
+}
+.socialnet-item .btn {
+  width: 190px;
+  height: 44px;
+  position: absolute;
+  left: 120px;
+  top: 111px;
+  color: #fff;
+  --bs-btn-border-color: #fff;
+}
+.socialnet-item .btn:hover {
+  border-color: #085507;
+  background-color: #9BC715;
+}
+.socialnet-item .btn-instagram {
+  background: #D8479A;
+}
+.socialnet-item .btn-facebook {
+  background: #4F71A7;
+}
+.socialnet-item .btn-telegram {
+  background: #4AB5E2;
+}
+
+.separator {
+  background-image: url("/img/separator.png");
+  height: 53px;
+  background-position: center;
+  background-repeat: repeat-x;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 35px;
+}
+.separator h3 {
+  line-height: 53px;
+}
+
+.partners {
+  margin-bottom: 35px;
+}
+.footer {
+  font-size: 10pt;
+}
+.footer .footer-items {
+  background-color: #4E4D4D;
+  color: #fff;
+}
+.footer .footer-items h6 {
+  color: #9BC715;
+}
+.footer .footer-items p {
+  margin-bottom: 0px;
+}
+.footer .footer-items .footer-left {
+  margin-bottom: 20px;
+}
+.footer .separator {
+  margin-bottom: 0px;
+}
+.footer .separator h7 {
+  line-height: 53px;
 }
