--- a/scss/style.sass
+++ b/scss/style.sass
@@ -16,7 +16,7 @@ h4
     color: $litegreen
 
 .header
-    margin-bottom: 20px
+    // margin-bottom: 20px
 
 .header__up
     background-color: $litegreen
@@ -56,9 +56,6 @@ h4
     &:hover
         font-size: 19pt
 
-.main-text
-    margin-bottom: 35px
-
 .fullscreen-bg 
     overflow: hidden
     z-index: -100
@@ -75,9 +72,8 @@ h4
     left: 0
     width: 100%
     
-
 .overlay 
-    background: rgba(0,0,0,0.5)
+    background: rgba(0,0,0,0.2)
     position: absolute
     top:0
     left:0
@@ -120,11 +116,10 @@ h4
             width:30%
 
 .image
-    margin-bottom: 35px
     overflow: hidden
     margin-left: auto
     margin-right: auto
-    width: 24rem
+    width: 345px
     border-radius: 5px
     position: relative
     .bottom-left
@@ -146,13 +141,13 @@ h4
 form
     padding: 30px
     border: 1px solid #E1E1E1
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)  
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) 
+    border-radius: 5px 
 
 .consultation
     width: 70%
     margin-left: auto
     margin-right: auto
-    margin-bottom: 35px
     img
         width: 300px
         display: block
@@ -168,7 +163,6 @@ form
 
 .socialnet-item
     position: relative
-    margin-bottom: 35px
     width: 345px
     height: 181px
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))            
@@ -211,11 +205,6 @@ form
     margin-bottom: 35px
     h3
         line-height: 53px
-
-.partners
-    margin-bottom: 35px
-    .partner
-
 
 .footer
     font-size: 10pt
