--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -1,4 +1,4 @@
-@import "/bootstrap/bootstrap.css"
+@import "/src/bootstrap/bootstrap.css"
 
 *
     font-family: 'Open Sans', sans-serif
@@ -14,9 +14,6 @@ h1
 h4
     text-align: center
     color: $litegreen
-
-.header
-    // margin-bottom: 20px
 
 .header__up
     background-color: $litegreen
@@ -61,19 +58,19 @@ h4
     z-index: -100
     position: relative
     height: 100%
-    width: 76%
-    padding-top:36%
+    width: 81%
+    padding-top:39%
     margin: auto
     border-radius: 5px
 
 .fullscreen-bg__video 
     position: absolute
-    top: -25%
+    top: -24%
     left: 0
     width: 100%
     
 .overlay 
-    background: rgba(0,0,0,0.2)
+    background: rgba(0,0,0,0.1)
     position: absolute
     top:0
     left:0
