--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import "/src/bootstrap/bootstrap.css";
+@import "../bootstrap/bootstrap.css";
 * {
   font-family: "Open Sans", sans-serif;
 }
@@ -172,16 +172,6 @@ form {
   display: block;
   margin: 0 auto;
 }
-.consultation .btn {
-  color: #085507;
-  --bs-btn-bg: #fff;
-  --bs-btn-border-color: #085507;
-}
-.consultation .btn:hover {
-  color: #fff;
-  background-color: #9BC715;
-  border-color: #085507;
-}
 
 .socialnet-item {
   position: relative;
@@ -224,6 +214,28 @@ form {
   background: #4AB5E2;
 }
 
+.send-request {
+  color: #085507;
+  --bs-btn-bg: #fff;
+  --bs-btn-border-color: #085507;
+}
+.send-request:hover {
+  color: #fff;
+  background-color: #9BC715;
+  border-color: #085507;
+}
+
+.send-request-modal {
+  color: #085507;
+  --bs-btn-bg: #fff;
+  --bs-btn-border-color: #085507;
+}
+.send-request-modal:hover {
+  color: #fff;
+  background-color: #9BC715;
+  border-color: #085507;
+}
+
 .separator {
   background-image: url("/img/separator.png");
   height: 53px;
@@ -258,4 +270,4 @@ form {
 }
 .footer .separator h7 {
   line-height: 53px;
-}
+}/*# sourceMappingURL=style.css.map */
