--- a/scss/style.sass
+++ b/scss/style.sass
@@ -1,4 +1,5 @@
-@import "/src/bootstrap/bootstrap.css"
+@import "../bootstrap/bootstrap.css"
+
 
 *
     font-family: 'Open Sans', sans-serif
@@ -149,14 +150,7 @@ form
         width: 300px
         display: block
         margin: 0 auto
-    .btn
-        color: #085507
-        --bs-btn-bg: #fff
-        --bs-btn-border-color: #085507
-        &:hover
-            color: #fff
-            background-color: #9BC715
-            border-color: #085507
+
 
 .socialnet-item
     position: relative
@@ -191,6 +185,24 @@ form
         background: #4F71A7
     .btn-telegram
         background: #4AB5E2
+
+.send-request
+    color: #085507
+    --bs-btn-bg: #fff
+    --bs-btn-border-color: #085507
+    &:hover
+        color: #fff
+        background-color: #9BC715
+        border-color: #085507
+
+.send-request-modal
+    color: #085507
+    --bs-btn-bg: #fff
+    --bs-btn-border-color: #085507
+    &:hover
+        color: #fff
+        background-color: #9BC715
+        border-color: #085507
 
 .separator
     background-image: url('/img/separator.png')
