--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ h4 {
   z-index: -100;
   position: relative;
   height: 100%;
-  width: 81%;
+  width: 84%;
   padding-top: 39%;
   margin: auto;
   border-radius: 5px;
@@ -267,7 +267,61 @@ form {
 }
 .footer .separator {
   margin-bottom: 0px;
-}
-.footer .separator h7 {
   line-height: 53px;
-}/*# sourceMappingURL=style.css.map */
+}
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.popup .popuptext {
+  visibility: hidden;
+  width: 180px;
+  background-color: red;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 4px;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -165px;
+  margin-bottom: 28px;
+}
+.popup .popuptext:after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: red transparent transparent transparent;
+}
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
