--- a/scss/style.sass
+++ b/scss/style.sass
@@ -232,16 +232,17 @@ form
 
 .popup
     position: relative
-    display: inline-block
+    display: inline
     cursor: pointer
     -webkit-user-select: none
     -moz-user-select: none
     -ms-user-select: none
     user-select: none
+
     .popuptext 
         visibility: hidden
-        width: 180px
-        background-color: red
+        width: 280px
+        background-color: #9BC715
         color: #fff
         text-align: center
         border-radius: 6px
@@ -250,21 +251,24 @@ form
         z-index: 1
         bottom: 125%
         left: 50%
-        margin-left: -165px
-        margin-bottom: 28px
+        margin-left: 80px
+        margin-bottom: 8px
         &:after 
             content: ""
             position: absolute
             top: 100%
-            left: 50%
+            left: 10%
             margin-left: -5px
             border-width: 5px
             border-style: solid
-            border-color: red transparent transparent transparent
+            border-color: #9BC715 transparent transparent transparent
     .show 
         visibility: visible
         -webkit-animation: fadeIn 1s
         animation: fadeIn 1s
+
+.popup-modal
+    width: 380px
 
 @-webkit-keyframes fadeIn
     from
