--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,7 @@ form {
   bottom: -35px;
 }
 .socialnet-item .btn {
+  padding: 8px;
   width: 190px;
   height: 44px;
   position: absolute;
@@ -234,6 +235,12 @@ form {
   color: #fff;
   background-color: #9BC715;
   border-color: #085507;
+}
+
+.modal-footer .popup {
+  position: relative;
+  left: 55px;
+  bottom: 20px;
 }
 
 .separator {
@@ -309,10 +316,6 @@ form {
   animation: fadeIn 1s;
 }
 
-.popup-modal {
-  width: 380px;
-}
-
 @-webkit-keyframes fadeIn {
   from {
     opacity: 0;
@@ -327,5 +330,61 @@ form {
   }
   to {
     opacity: 1;
+  }
+}
+.timeline-steps {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.timeline-steps .timeline-step {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin: 3rem;
+}
+.timeline-steps .timeline-content {
+  width: 10rem;
+  text-align: center;
+}
+.timeline-steps .timeline-content .inner-circle {
+  border-radius: 5rem;
+  height: 3rem;
+  width: 3rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #9BC715;
+}
+.timeline-steps .timeline-content .inner-circle:before {
+  content: "";
+  background-color: #9BC715;
+  display: inline-block;
+  height: 4rem;
+  width: 4rem;
+  min-width: 4rem;
+  border-radius: 6.25rem;
+  opacity: 0.5;
+}
+
+@media (min-width: 768px) {
+  .timeline-steps .timeline-step:not(:last-child):after {
+    content: "";
+    display: block;
+    border-top: 0.25rem dotted #9BC715;
+    width: 5.46rem;
+    position: absolute;
+    left: 8rem;
+    top: 1.2125rem;
+  }
+  .timeline-steps .timeline-step:not(:first-child):before {
+    content: "";
+    display: block;
+    border-top: 0.25rem dotted #9BC715;
+    width: 4rem;
+    position: absolute;
+    right: 8rem;
+    top: 1.2125rem;
   }
 }
