--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,24 @@ form {
   border: 1px solid #E1E1E1;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
+  position: relative;
+}
+form::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../img/loading.gif") center/50px no-repeat;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.sending::after {
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.5s ease 0s;
 }
 
 .consultation {
@@ -290,7 +308,7 @@ form {
 }
 .popup .popuptext {
   visibility: hidden;
-  width: 400px;
+  width: 250px;
   background-color: #9BC715;
   color: #fff;
   text-align: center;
