--- a/scss/style.sass
+++ b/scss/style.sass
@@ -140,6 +140,22 @@ form
     border: 1px solid #E1E1E1
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
     border-radius: 5px
+    position: relative
+    &::after
+        content: ""
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        background: url('../img/loading.gif') center / 50px no-repeat
+        opacity: 0
+        visibility: hidden
+.sending
+    &::after
+        opacity: 1
+        visibility: visible
+        transition: all 0.5s ease 0s
 
 .consultation
     width: 70%
@@ -209,7 +225,6 @@ form
         left: 55px
         bottom: 20px
 
-
 .separator
     background-image: url('/img/separator.png')
     height: 53px
@@ -249,7 +264,7 @@ form
 
     .popuptext 
         visibility: hidden
-        width: 400px
+        width: 250px
         background-color: #9BC715
         color: #fff
         text-align: center
