--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,13 @@
   font-family: "Open Sans", sans-serif;
 }
 
-h1 {
-  text-align: center;
+.green {
   color: #9BC715;
 }
 
-h4 {
-  text-align: center;
+.select {
   color: #9BC715;
+  font-weight: bold;
 }
 
 .header__up {
@@ -120,13 +119,18 @@ h4 {
   margin-left: auto;
   margin-right: auto;
   width: 24rem;
-  box-shadow: 0px 4px 20px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 20px 1px rgba(0, 0, 0, 0.1);
 }
 .icons .card img {
   margin-left: auto;
   margin-right: auto;
-  height: 30%;
-  width: 30%;
+  margin-top: 10px;
+  height: 25%;
+  width: 25%;
+  transition: 1s;
+}
+.icons .card img:hover {
+  transform: scale(1.2);
 }
 
 .image {
@@ -262,7 +266,7 @@ form::after {
 }
 
 .separator {
-  background-image: url("/img/separator.png");
+  background-image: url("/img/separator.webp");
   height: 53px;
   background-position: center;
   background-repeat: repeat-x;
@@ -363,11 +367,22 @@ form::after {
   display: flex;
   flex-direction: column;
   position: relative;
-  margin: 3rem;
+  margin-left: 4rem;
+  margin-right: 4rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .timeline-steps .timeline-content {
   width: 10rem;
   text-align: center;
+}
+.timeline-steps .timeline-content .num {
+  position: absolute;
+  display: inline-flex;
+  left: 73px;
+  top: 6px;
+  color: #fff;
+  font-size: 1.5rem;
 }
 .timeline-steps .timeline-content .inner-circle {
   border-radius: 5rem;
@@ -385,7 +400,7 @@ form::after {
   height: 4rem;
   width: 4rem;
   min-width: 4rem;
-  border-radius: 6.25rem;
+  border-radius: 7.25rem;
   opacity: 0.5;
 }
 
@@ -396,16 +411,24 @@ form::after {
     border-top: 0.25rem dotted #9BC715;
     width: 5.76rem;
     position: absolute;
-    left: 8rem;
+    left: 8.5rem;
     top: 1.2125rem;
   }
   .timeline-steps .timeline-step:not(:first-child):before {
     content: "";
     display: block;
     border-top: 0.25rem dotted #9BC715;
-    width: 4rem;
+    width: 5rem;
     position: absolute;
-    right: 8rem;
+    right: 8.5rem;
     top: 1.2125rem;
   }
+}
+.banner {
+  margin-bottom: 30px;
+}
+
+.hr-line {
+  margin: 30px auto 30px auto;
+  border-top: 2px dashed #bbb;
 }
