--- a/scss/style.sass
+++ b/scss/style.sass
@@ -7,13 +7,12 @@
 $litegreen: #9BC715
 $darkgreen: #085507
 
-h1
-    text-align: center
-    color: $litegreen
+.green
+     color: $litegreen
 
-h4
-    text-align: center
+.select
     color: $litegreen
+    font-weight: bold
 
 .header__up
     background-color: $litegreen
@@ -105,12 +104,16 @@ h4
         margin-left: auto
         margin-right: auto
         width: 24rem
-        box-shadow: 0px 4px 20px 2px rgba(0, 0, 0, 0.25)
+        box-shadow: 0px 2px 20px 1px rgba(0, 0, 0, 0.1)
         img
             margin-left: auto
             margin-right: auto
-            height: 30%
-            width: 30%
+            margin-top: 10px
+            height: 25%
+            width: 25%
+            transition: 1s
+            &:hover
+                transform: scale(1.2)
 
 .image
     overflow: hidden
@@ -226,7 +229,7 @@ form
         bottom: 20px
 
 .separator
-    background-image: url('/img/separator.png')
+    background-image: url('/img/separator.webp')
     height: 53px
     background-position: center
     background-repeat: repeat-x
@@ -312,10 +315,20 @@ form
         display: flex
         flex-direction: column
         position: relative
-        margin: 3rem
+        margin-left: 4rem
+        margin-right: 4rem
+        margin-top: 1rem
+        margin-bottom: 1rem
     .timeline-content
         width: 10rem
         text-align: center
+        .num
+            position: absolute
+            display: inline-flex
+            left: 73px
+            top: 6px
+            color: #fff
+            font-size: 1.5rem
         .inner-circle
             border-radius: 5rem
             height: 3rem
@@ -331,7 +344,7 @@ form
                 height: 4rem
                 width: 4rem
                 min-width: 4rem
-                border-radius: 6.25rem
+                border-radius: 7.25rem
                 opacity: .5
  
 @media (min-width:768px) 
@@ -343,18 +356,29 @@ form
                 border-top: .25rem dotted #9BC715
                 width: 5.76rem
                 position: absolute
-                left: 8rem
+                left: 8.5rem
                 top: 1.2125rem
         .timeline-step:not(:first-child)
             &:before
                 content: ""
                 display: block
                 border-top: .25rem dotted #9BC715
-                width: 4rem
+                width: 5rem
                 position: absolute
-                right: 8rem
+                right: 8.5rem
                 top: 1.2125rem
                 
+.banner
+    margin-bottom: 30px    
+
+.hr-line
+    margin: 30px auto 30px auto
+    border-top: 2px dashed #bbb
+
+// .magazine
+//     width: 400px
+//     height: auto
+
     
 
 
