--- a/scss/style.sass
+++ b/scss/style.sass
@@ -17,6 +17,7 @@ $darkgreen: #085507
 .header__up
     background-color: $litegreen
     color: white
+    
 
 .header__item
     margin: 5px auto
@@ -37,14 +38,18 @@ $darkgreen: #085507
         color: #fff
         text-decoration: none
 
-.header__bottom
+.navbar
+    position: sticky
+    top: 0
+    z-index: 200
     .btn
         margin-left: 5px
         color: $darkgreen
+    #navbarNav
+        a
+            font-size: 11pt
 
-#navbarNav
-    a
-        font-size: 11pt
+
 
 .dropdown-item
     --bs-dropdown-link-hover-color: #000
@@ -375,9 +380,14 @@ form
     margin: 30px auto 30px auto
     border-top: 2px dashed #bbb
 
-// .magazine
-//     width: 400px
-//     height: auto
+.magazine
+    margin-bottom: 30px
+
+.gallery
+    margin-bottom: 30px
+    img
+        max-height: 250px
+
 
     
 
