--- a/scss/style.sass
+++ b/scss/style.sass
@@ -1,4 +1,5 @@
-@import "../bootstrap/bootstrap.css"
+// @import "../bootstrap/bootstrap.css"
+@import "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css"
 
 *
     font-family: 'Open Sans', sans-serif
