--- a/scss/style.sass
+++ b/scss/style.sass
@@ -50,7 +50,13 @@ $darkgreen: #085507
         a
             font-size: 11pt
 
+.navbar-opacity
+        opacity: .9
+        transition: 1s
 
+.btn-group
+    list-style-type: none
+    padding-left: 0px
 
 .dropdown-item
     --bs-dropdown-link-hover-color: #000
@@ -103,6 +109,8 @@ $darkgreen: #085507
 
 .icons
     margin-bottom: 35px
+    a
+        color: #9BC715
     p
         line-height: 1.3
     .card
@@ -111,6 +119,7 @@ $darkgreen: #085507
         margin-right: auto
         width: 24rem
         box-shadow: 0px 2px 20px 1px rgba(0, 0, 0, 0.1)
+        --bs-card-border-width: 0px
         img
             margin-left: auto
             margin-right: auto
@@ -321,17 +330,17 @@ form
         display: flex
         flex-direction: column
         position: relative
-        margin-left: 4rem
-        margin-right: 4rem
+        margin-left: 3rem
+        margin-right: 3rem
         margin-top: 1rem
         margin-bottom: 1rem
     .timeline-content
-        width: 10rem
+        width: 12rem
         text-align: center
         .num
             position: absolute
             display: inline-flex
-            left: 73px
+            left: 89px
             top: 6px
             color: #fff
             font-size: 1.5rem
@@ -360,18 +369,18 @@ form
                 content: ""
                 display: block
                 border-top: .25rem dotted #9BC715
-                width: 5.76rem
+                width: 5rem
                 position: absolute
-                left: 8.5rem
+                left: 9.3rem
                 top: 1.2125rem
         .timeline-step:not(:first-child)
             &:before
                 content: ""
                 display: block
                 border-top: .25rem dotted #9BC715
-                width: 5rem
+                width: 6rem
                 position: absolute
-                right: 8.5rem
+                right: 9.5rem
                 top: 1.2125rem
                 
 .banner
@@ -384,11 +393,10 @@ form
 .magazine
     margin-bottom: 30px
 
-.gallery
+#gallery
     margin-bottom: 30px
     img
         max-height: 250px
-
 
     
 
