--- a/scss/style.sass
+++ b/scss/style.sass
@@ -411,16 +411,46 @@ form
     &:hover
         transform: scale(1.2)
 
+.carousel-wrapper
+    padding-bottom: 30px
+
+.partners-wrapper
+    padding-bottom: 30px
+
 .carousel-item
-    transition: transform 1.5s ease-in-out
+    // transition: transform 1s ease-in-out
     .btn
         position: relative
-        left: 170px
-        bottom: 180px
+        left: 24%
+        bottom: 120px
         background-color: $litegreen
-        height: 50px
+        width: 150px
+        height: 40px
         &:hover
             background-color: #fff
+
+.app
+    width: 220px
+
+.description
+    margin-bottom: 30px
+    li
+        list-style-type: none
+        &::before
+            content: "- "
+
+.mashines
+    padding-bottom: 30px
+    .card
+        height: 100%
+        // --bs-card-border-width: 0px
+    li
+        list-style-type: none
+        &:before
+            color: #fd0000
+            content: "●"
+            padding-right: 10px
+
 
 
 
