--- a/scss/style.sass
+++ b/scss/style.sass
@@ -8,6 +8,7 @@ $litegreen: #9BC715
 $darkgreen: #085507
 
 
+
 .green
      color: $litegreen
 
@@ -27,6 +28,7 @@ $darkgreen: #085507
         padding: 0
     button
         margin-top: 5px
+        margin-bottom: 5px
         background-color: #fff
 
 .telephone
@@ -34,7 +36,6 @@ $darkgreen: #085507
     text-decoration: none
     color: #fff
     font-size: 10pt
-
     &:hover
         color: #fff
         text-decoration: none
@@ -451,7 +452,64 @@ form
             content: "●"
             padding-right: 10px
 
+.indent
+    text-indent: 10px
 
+// .hover-text-one
+//     overflow: hidden
+//     margin: 0
+//     width: 100%
+//     list-style: none
+//     text-align: center
+//     figure
+//         position: relative
+//         z-index: 1
+//         display: inline-block
+//         overflow: hidden
+//         text-align: center
+//         img
+//             position: relative
+//             display: block
+//             figcaption
+//                 padding: 2em
+//                 -webkit-backface-visibility: hidden
+//                 backface-visibility: hidden
+//                 &::after
+//                     pointer-events: none
+//                 &::before
+//                     pointer-events: none
+//             figcaption
+//                 position: absolute
+//                 top: 0
+//                 left: 0
+//                 width: 100%
+//                 height: 100%
+
+// figure
+//     .effect-text-tree
+//         img
+//             -webkit-transition: opacity 0.35s, -webkit-transform 0.35s
+//             transition: opacity 0.35s, transform 0.35s
+//             transform: scale(1.1)
+//             -webkit-backface-visibility: hidden
+//             backface-visibility: hidden
+//             &:hover
+//                 -webkit-transform: translate3d(0,0,0)
+//                 transform: translate3d(0,0,0)
+//         ul
+//             padding: 1em 0
+//             opacity: 0
+//             -webkit-transition: opacity 0.35s, -webkit-transform 0.35s
+//             transition: opacity 0.35s, transform 0.35s
+//             -webkit-transform: translate3d(100%,0,0)
+//             transform: translate3d(100%,0,0)
+//             &:hover
+//                 opacity: 1
+//                 -webkit-transform: translate3d(0,0,0)
+//                 transform: translate3d(0,0,0)
+    
+
+        
 
 
 
