--- a/css/style.css
+++ b/css/style.css
@@ -533,117 +533,71 @@ form::after {
   text-indent: 10px;
 }
 
-.clearfix:before, .clearfix:after { 
-	content: ''; 
-	display: table; 
-}
-.clearfix:after { 
-	clear: both; 
-}
-.hover-text-one {
-	overflow: hidden;
-	margin: 0;
-	width: 100%;
-	list-style: none;
-	text-align: center;
-}
 .hover-text-one figure {
-	position: relative;
-	z-index: 1;
-	display: inline-block;
-	overflow: hidden;
-	text-align: center;
-	cursor: pointer;
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  overflow: hidden;
+  text-align: center;
 }
 .hover-text-one figure img {
-	position: relative;
-	display: block;
-	min-height: 100%;
-	opacity: 0.8;
+  position: relative;
+  display: block;
+  min-height: 100%;
+  z-index: 10;
 }
 .hover-text-one figure figcaption {
-	padding: 2em;
-	text-transform: uppercase;
-	font-size: 1.25em;
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
+  padding-left: 0.45em;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
-.hover-text-one figure figcaption::before,
-.hover-text-one figure figcaption::after {
-	pointer-events: none;
+.hover-text-one figure figcaption {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
-.hover-text-one figure figcaption{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-.hover-text-one figure h3 {
-	word-spacing: -0.15em;
-	font-weight: 300;
-}
-.hover-text-one figure h3 span {
-	font-weight: 800;
-}
-.hover-text-one figure h3,
-.hover-text-one figure p {
-	margin: 0;
-}
-.hover-text-one figure p {
-	letter-spacing: 1px;
-	font-size: 68.5%;
+.hover-text-one figure .timeline {
+  position: absolute;
+  width: 100%;
+  left: -25%;
+  margin: 0;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.35s ease;
+  z-index: 20;
 }
 
 figure.effect-text-three img {
-	width: -webkit-calc(100% + 20px);
-	width: calc(100% + 20px);
-	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	transition: opacity 0.35s, transform 0.35s;
-	transform: scale(1.1);
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 figure.effect-text-three:hover img {
-	opacity: 0.4;
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
-}
-figure.effect-text-three figcaption {
-	text-align: left;
-}
-figure.effect-text-three h3 {
-	position: relative;
-	overflow: hidden;
-	padding: 0.5em 0;
-}
-figure.effect-text-three h3::after {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 3px;
-	background: #fff;
-	content: '';
-	-webkit-transition: -webkit-transform 0.35s;
-	transition: transform 0.35s;
-	-webkit-transform: translate3d(-100%,0,0);
-	transform: translate3d(-100%,0,0);
-}
-figure.effect-text-three:hover h3::after {
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
-}
-figure.effect-text-three ul {
-	padding: 1em 0;
-	opacity: 0;
-	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: translate3d(100%,0,0);
-	transform: translate3d(100%,0,0);
+  -webkit-transform: translate3d(60px, 0, 0);
+  transform: translate3d(60px, 0, 0);
 }
 figure.effect-text-three:hover ul {
-	opacity: 1;
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
+figure.effect-text-three:hover .timeline {
+  opacity: 1;
+}
+figure.effect-text-three figcaption {
+  text-align: left;
+}
+figure.effect-text-three ul {
+  padding-top: 1.5em;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(30%, 0, 0);
+  transform: translate3d(30%, 0, 0);
+}/*# sourceMappingURL=style.css.map */
