--- a/css/style.css
+++ b/css/style.css
@@ -549,13 +549,13 @@ form::after {
 .hover-text-one figure figcaption {
   padding-left: 0.45em;
   text-transform: uppercase;
-  font-size: 0.8em;
+  font-size: 0.7em;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 .hover-text-one figure figcaption {
   position: absolute;
-  top: 0;
+  top: 4%;
   left: 0;
   width: 100%;
   height: 100%;
@@ -563,8 +563,9 @@ form::after {
 .hover-text-one figure .timeline {
   position: absolute;
   width: 100%;
-  left: -25%;
+  left: -30%;
   margin: 0;
+  padding: 0;
   text-align: center;
   opacity: 0;
   transition: opacity 0.35s ease;
@@ -578,6 +579,10 @@ figure.effect-text-three img {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+figure.effect-text-three .combo {
+  -webkit-transition: scale 0.35s, -webkit-transform 0.35s;
+  transition: scale 0.35s, transform 0.35s;
+}
 figure.effect-text-three:hover img {
   -webkit-transform: translate3d(60px, 0, 0);
   transform: translate3d(60px, 0, 0);
@@ -590,6 +595,13 @@ figure.effect-text-three:hover ul {
 figure.effect-text-three:hover .timeline {
   opacity: 1;
 }
+figure.effect-text-three:hover .combo {
+  -webkit-transition: scale 0.35s, -webkit-transform 0.35s;
+  transition: scale 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(110px, 0, 0);
+  transform: translate3d(110px, 0, 0);
+  scale: 0.75;
+}
 figure.effect-text-three figcaption {
   text-align: left;
 }
@@ -600,4 +612,4 @@ figure.effect-text-three ul {
   transition: opacity 0.35s, transform 0.35s;
   -webkit-transform: translate3d(30%, 0, 0);
   transform: translate3d(30%, 0, 0);
-}/*# sourceMappingURL=style.css.map */
+}
