--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -440,7 +440,7 @@ form
         &::before
             content: "- "
 
-.mashines
+.cards
     padding-bottom: 30px
     .card
         height: 100%
@@ -479,6 +479,10 @@ form
             left: 0
             width: 100%
             height: 100%
+        .goods
+            top: 18%
+            left: -10px
+
         .timeline
             position: absolute
             width: 100%
