--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -50,6 +50,30 @@ $darkgreen: #085507
     #navbarNav
         a
             font-size: 11pt
+    #logo1
+        -o-transition: all 0.5s ease-in-out
+        -moz-transition: all 0.5s ease-in-out
+        -webkit-transition: all 0.5s ease-in-out
+        transition: all 0.5s ease-in-out
+        &:hover
+            -o-transform: scaleX(-1)
+            -ms-transform: scaleX(-1)
+            -moz-transform: scaleX(-1)
+            -webkit-transform: scaleX(-1)
+            transform: scaleX(-1)
+    #logo2
+        -o-transition: all 0.5s ease-in-out
+        -moz-transition: all 0.5s ease-in-out
+        -webkit-transition: all 0.5s ease-in-out
+        transition: all 0.5s ease-in-out
+        &:hover
+            // -o-transform: translateX(-20px)
+            // -ms-transform: translateX(-20px)
+            // -moz-transform: translateX(-20px)
+            // -webkit-transform: translateX(-20px)
+            // transform: translateX(-20px)
+            scale: .8
+            opacity: 0
 
 .navbar-opacity
         opacity: .9
