--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -599,21 +599,21 @@ figure.effect-text-three
         margin-left: -1em
     .tel
         list-style-type: none
-        &:before
-            color: #9BC715
-            content: "📱"
-            padding-right: 10px
+        // &:before
+        //     color: #9BC715
+        //     content: "1"
+        //     padding-right: 10px
     .mail
         list-style-type: none
-        &:before
-            color: #9BC715
-            content: "✉"
-            padding-right: 10px
+        // &:before
+        //     color: #9BC715
+        //     content: "✉"
+        //     padding-right: 10px
     a
         list-style-type: none
         text-decoration: none
         color: #000
-        font-size: 12pt
+        font-size: 11pt
     //list-style-type: none
     //text-decoration: none
     //color: #000
