--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -123,12 +123,16 @@ $darkgreen: #085507
     padding-top: 3%
     padding-left: 5%
     padding-right: 5%
+    
     li
         list-style-type: none
         &:before
             color: #9BC715
             content: "●"
             padding-right: 10px
+
+.main-text-size
+    font-size: .97rem
 
 .icons
     margin-bottom: 35px
@@ -495,7 +499,7 @@ $darkgreen: #085507
             padding-right: 10px
 
 .indent
-    text-indent: 10px
+    text-indent: 1.5rem
 
 .hover-text-one
     figure 
